@@ -597,6 +597,14 @@ tvnow</a> - a TV listing viewer for the TVNOW subscription service.
 graphical interface to the lm_sensors hardware monitoring package. 
 </ul>
 
+<ul>
+<li><a href="http://members.tripod.com/ujjwalj/">Intra Chat</a> - a
+multi-platform GUI Chat facility for both Linux and Microsoft Windows machines
+in an office or institutional Intranet environment. It Features Chat room,
+Instantant Messaging, FTP and a White board. It also includes a dedicated chat
+server with very mall foot print.
+</ul>
+
 
 <!-- COPY THESE LINES AND FILL IN TO ADD A NEW APP
 <ul>
