@@ -168,6 +168,22 @@ Oct&nbsp;1&nbsp;2001
 <tr valign="top"><td>&nbsp;&nbsp;&nbsp;</td>
 <td><b><font face="Arial,helvetica,geneva,sans-serif,lucida">
 
+Jun&nbsp;21&nbsp;2001
+
+</b></font></td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+<td><font face="Arial,helvetica,geneva,sans-serif,lucida">
+
+<B>Updated French Translation of Glade FAQ</B>
+<P>
+Karquel Olivier has posted an updated
+<a href="http://yellowspoon.free.fr/">French translation of the Glade FAQ</a>.
+(Click on the 'Glade' button at the bottom of the page.)
+</font></td></tr>
+
+
+<tr valign="top"><td>&nbsp;&nbsp;&nbsp;</td>
+<td><b><font face="Arial,helvetica,geneva,sans-serif,lucida">
+
 Apr&nbsp;27&nbsp;2001
 
 </b></font></td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
