@@ -1,3 +1,9 @@
+2001-06-21  Damon Chaplin  <damon@ximian.com>
+
+	* index.html: added link to new French translation of FAQ.
+
+	* apps.html: added Intra Chat.
+
 2001-06-14  Damon Chaplin  <damon@ximian.com>
 
 	* FAQ: sync'ed with FAQ in glade.
